<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="130dip"
    android:paddingRight="130dip" >

    <Button
        android:id="@+id/sm_button_op_entrada"
        style="@style/style_button_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_op_entrada" />

    <Button
        android:id="@+id/sm_button_op_salida"
        style="@style/style_button_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_op_salida" />

    <Button
        android:id="@+id/sm_button_op_estiva"
        style="@style/style_button_text_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_op_estiva" />

    <Button
        android:id="@+id/sm_button_menu_exit"
        style="@style/style_button_text_size"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:text="@string/label_exit" />

</LinearLayout>