<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip"
    android:weightSum="0" >

    <TextView
        android:id="@+id/label_salida_title"
        style="@style/style_label_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:text="@string/label_op_salida"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip" >

        <TextView
            android:id="@+id/f_out_label_position"
            style="@style/style_label_text_size"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/label_position"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/f_out_textbox_position"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:ems="25"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/f_out_button_confirm"
            style="@style/style_button_text_size"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/label_confirm" />

        <Button
            android:id="@+id/f_out_button_back"
            style="@style/style_button_text_size"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/label_back" />

    </LinearLayout>

</LinearLayout>